# concerto-lang

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  STATUS.md
agents/claude_code/: Concerto.toml.example  README.md  main.conc.example
bugs/: 2026-02-08-len-builtin-unresolved.md  2026-02-09-agent-timeout-not-enforced.md  2026-02-09-call-arity-not-enforced.md  2026-02-09-cast-operator-allows-invalid-and-silent-conversions.md  2026-02-09-for-loop-iterable-type-not-validated.md  2026-02-09-index-access-spec-mismatch-string-and-array-get.md  2026-02-09-listen-typed-handler-schema-not-enforced.md  2026-02-09-logical-short-circuit-not-implemented.md  2026-02-09-match-error-binding-allows-invalid-field-access.md  2026-02-09-match-exhaustiveness-not-enforced.md  2026-02-09-missing-static-type-enforcement.md  2026-02-09-model-builder-argument-contracts-not-enforced.md  2026-02-09-nil-coalesce-option-runtime-mismatch.md  2026-02-09-none-pattern-parsed-as-identifier.md  2026-02-09-propagate-operator-option-and-operand-check-broken.md  2026-02-09-range-values-break-for-loop-and-slicing.md  2026-02-09-structural-pattern-matching-is-not-implemented.md  2026-02-09-try-catch-control-flow-corruption.md  2026-02-09-use-and-mod-declarations-not-functional.md
crates/concerto/: Cargo.toml
crates/concerto-common/: Cargo.toml
crates/concerto-common/src/: errors.rs  ir.rs  ir_opcodes.rs  lib.rs  manifest.rs  span.rs
crates/concerto-compiler/: Cargo.toml
crates/concerto-compiler/src/ast/: mod.rs  nodes.rs  types.rs  visitor.rs
crates/concerto-compiler/src/codegen/: constant_pool.rs  emitter.rs  mod.rs
crates/concerto-compiler/src/lexer/: cursor.rs  mod.rs  scanner.rs  token.rs
crates/concerto-compiler/src/parser/: declarations.rs  expressions.rs  mod.rs  statements.rs
crates/concerto-compiler/src/semantic/: mod.rs  resolver.rs  scope.rs  type_checker.rs  types.rs  validator.rs
crates/concerto-runtime/: Cargo.toml
crates/concerto-runtime/src/: agent.rs  builtins.rs  decorator.rs  error.rs  host.rs  ir_loader.rs  ledger.rs  lib.rs  mcp.rs  memory.rs  provider.rs  schema.rs  tool.rs  value.rs  vm.rs
crates/concerto-runtime/src/providers/: anthropic.rs  openai.rs
crates/concerto-runtime/src/stdlib/: collections.rs  crypto.rs  env.rs  fmt.rs  fs.rs  http.rs  json.rs  log.rs  math.rs  mod.rs  prompt.rs  string.rs  time.rs
crates/concerto-runtime/tests/: integration.rs
crates/concerto/src/: main.rs
crates/concertoc/: Cargo.toml
crates/concertoc/src/: main.rs
editors/vscode/: .vscodeignore  README.md  package.json  (+1 more)
examples/: hello_agent.conc  multi_agent_pipeline.conc  tool_usage.conc
ideas/: bidirectional_host_streaming.md  concerto_init.md  concerto_toml_manifest.md  harness_contracts_and_assertions.md  host_initialization_arguments.md  host_response_correlation_ids.md  ledger_model.md  pipeline_iterative_loops.md  pipeline_stage_type_contracts.md  provider_agnostic_structured_output.md  rename_agent_model_host_agent.md  test_improvement.md  unified_runtime_error_values.md
prompts/: bugfix.md
spec/: 00-overview.md  01-lexical-structure.md  02-type-system.md  03-variables-and-bindings.md  04-operators-and-expressions.md  05-control-flow.md  06-functions.md  07-agents.md  07-models.md  08-tools.md  09-memory-and-databases.md  10-emit-system.md  11-llm-connections.md  12-schema-validation.md  13-error-handling.md  14-modules-and-imports.md  15-concurrency-and-pipelines.md  16-ir-specification.md  17-runtime-engine.md  18-compiler-pipeline.md  19-standard-library.md  20-interop-and-ffi.md  21-ledger.md  22-project-manifest.md  23-project-scaffolding.md  24-model-memory.md  25-dynamic-tool-binding.md  26-agents.md  26-hosts.md  27-agent-streaming.md  27-host-streaming.md  28-testing.md  29-agent-initialization.md  30-pipeline-type-contracts.md
(+46 files in other folders)
