[package]
name = "concerto-runtime"
description = "Concerto language runtime: VM execution engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
concerto-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
jsonschema = { workspace = true }
