[package]
name = "concerto"
description = "Concerto language runtime CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "concerto"
path = "src/main.rs"

[dependencies]
concerto-common = { workspace = true }
concerto-compiler = { workspace = true }
concerto-runtime = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
