[package]
name = "concertoc"
description = "Concerto language compiler CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "concertoc"
path = "src/main.rs"

[dependencies]
concerto-common = { workspace = true }
concerto-compiler = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
ariadne = { workspace = true }
